# Game_Engine_X

./: .gitignore  AVANCES_RECIENTES.md  Archivo.md  CMakeLists.txt  COMO_EJECUTAR_EDITOR.md  EJECUTAR_EDITOR_RAPIDO.md  EJECUTAR_RAPIDO.md  EjecutarAmbos.ps1  GUIA_EDITOR_C#.md  GUIA_EJECUTAR_TIEMPO_REAL.md  GUIA_UI_INTEGRADA.md  INTEGRACION_VIEWPORT.md  PASOS_FINALES_Y_MEJORAS.md  PASOS_SIMPLES.md  Progresos.md  QUE_SIGNIFICA_Y_COMO_APLICAR.md  README.md  RESUMEN_MATERIAL_SYSTEM.md
DirectX12Editor/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  config.json.example
Engine/Config/: EditorSettings.ini  Engine.ini
Engine/Content/Materials/: DefaultMaterial.json
Engine/Core/Include/: D3D12CommandQueue.h  D3D12ConstantBuffer.h  D3D12Core.h  D3D12DescriptorHeap.h  D3D12HighResRenderTarget.h  D3D12Material.h  D3D12SwapChain.h
Engine/Core/Source/: D3D12Buffer.cpp  D3D12CommandQueue.cpp  D3D12ConstantBuffer.cpp  D3D12Core.cpp  D3D12DescriptorHeap.cpp  D3D12Device.cpp  D3D12HighResRenderTarget.cpp  D3D12Material.cpp  D3D12Mesh.cpp  D3D12PipelineState.cpp  D3D12SwapChain.cpp  Shader.cpp  main.cpp
Engine/Editor/DirectX12Editor/: App.xaml  App.xaml.cs  DirectX12Editor.csproj  DirectXHost.cs  MainWindow.xaml  MainWindow.xaml.cs  MaterialEditor.xaml  MaterialEditor.xaml.cs  README.md  ViewportAutoScaler.cs
Engine/Rendering/Shaders/: ScalePS.hlsl  ScaleVS.hlsl
Tools/Batch/: MoveToNewStructure.ps1
include/: D3D12Buffer.h  D3D12Core.h  D3D12Device.h  D3D12Mesh.h  D3D12PipelineState.h  Shader.h
resources/: .gitkeep
shaders/: BasicPS.hlsl  BasicVS.hlsl
src/: D3D12Buffer.cpp  D3D12CommandQueue.cpp  D3D12ConstantBuffer.cpp  D3D12Core.cpp  D3D12DescriptorHeap.cpp  D3D12Device.cpp  D3D12Mesh.cpp  D3D12PipelineState.cpp  D3D12SwapChain.cpp  Shader.cpp  main.cpp
